<resources>
    <string name="app_name">Plant Helper</string>
    <string name="my_plants">My plants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watering_comment">watering comment</string>
    <string name="nutrition_comment">nutrition comment</string>
    <string name="_1970_01_01">1970-01-01</string>
    <string name="type_of_event">Type of Event</string>
    <string name="scientific_name_hint">Scientific name</string>
    <string name="plant_name_hint">Plant name</string>
    <string name="description_hint">Description</string>
    <string name="add_image_button_text">Add image</string>
    <string name="nutrition_comment_hint">Nutrition details</string>
    <string name="nutrition_interval_days_hint">Nutrition interval (days)</string>
    <string name="save_button_tooltip">Save\n</string>
    <string name="watering_card_title">Watering</string>
    <string name="add_event_button_text">Add Event</string>
    <string name="nutrition_event_text">Nutrition</string>
    <string name="watering_event_text">Water</string>
    <string name="status_event_text">Status</string>
    <string name="camera_event_text">Photo</string>
    <string name="pick_today_button_text">Today</string>
    <string name="pick_date_button_text">Pick Date</string>
    <string name="photo_filter_text">Photos</string>
    <string name="status_filter_text">Statuses</string>
    <string name="reset_filter_text">Reset filter</string>
    <string name="edit_image_text">Edit image</string>
    <string name="edit_plant_text">Edit plant</string>
    <string name="status_hint">Add status</string>
    <string name="add_event_comment">Add comment</string>
    <string name="menu_edit_text">Edit</string>
    <string name="menu_delete_text">Delete</string>
    <string name="interval_days_text">Every %1$s! to %2$d days</string>
    <string name="replant_dates">Replant dates</string>
    <string name="add_date">Add date</string>
    <string name="sunlight_details">Sunlight details</string>
    <string name="sunlight_comment">Sunlight details</string>
    <string name="replants">Replants</string>
    <string name="replant">Replant</string>
    <string name="events">Events</string>
    <string name="information">Information</string>
    <string name="hide_calendar">Hide Calendar</string>
    <string name="pick_date">Pick date</string>
    <string name="watering_details">Watering details</string>
    <string name="save">Save</string>
    <string name="watering_interval_days">Watering interval (days)</string>
    <string name="add_plant">Add plant</string>
    <string name="take_photo">Take photo</string>
    <string name="description">Description</string>
    <string name="nutrition">Nutrition</string>
</resources>