<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_plant_layout"
    android:fitsSystemWindows="true"
    android:windowLightStatusBar="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".buildPlantActivity.BuildPlantActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_primary"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_plant"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:backgroundTint="@android:color/transparent">
        </ImageButton>


    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"


            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/plantNameInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/plant_name_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"


                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/scientificNameInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/scientific_name_hint"
                android:maxLength="40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plantNameInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_image_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_image_card"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@android:color/transparent"
                app:strokeColor="@android:color/transparent"
                app:strokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/add_image_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_image_button_text"
                android:src="@drawable/photo_camera_24px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:id="@+id/watering_interval_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/watering_interval_days"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionInput" />

            <CheckBox
                android:id="@+id/watering_slider_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@id/watering_interval_text"
                app:layout_constraintStart_toEndOf="@id/watering_interval_text"
                app:layout_constraintTop_toTopOf="@id/watering_interval_text" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/watering_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/watering_interval_text"
                app:values="@array/water_slider_initial" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wateringCommentInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/watering_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/watering_slider">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/nutrition_interval_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nutrition_interval_days_hint"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wateringCommentInput" />

            <CheckBox
                android:id="@+id/nutrition_slider_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@id/nutrition_interval_text"
                app:layout_constraintStart_toEndOf="@id/nutrition_interval_text"
                app:layout_constraintTop_toTopOf="@id/nutrition_interval_text" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/nutrition_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nutrition_interval_text"
                app:values="@array/nutrition_slider_initial" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nutritionCommentInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/nutrition_comment_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nutrition_slider">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sunlightDetailsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/sunlight_comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nutritionCommentInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/save"
        android:textSize="16sp"
        app:srcCompat="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>